<resources>
    <string name="app_name">Zipit</string>
    <string name="action_settings">Settings</string>
    <string name="icon_item">Icon Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_extra">Item extra information</string>
    <string name="item_date">Item last modified date</string>
    <string name="pathlocal">Stockage Interne ></string>
    <string name="pathsd">Carte SD ></string>
    <string name="element">élément</string>
    <string name="elements">éléments</string>
    <string name="toast_message">est un fichier, vous ne pourrez l\'ouvrir!</string>
    <string name="title_activity_splash_activity">Splash_activity</string>

    <string name="sd_explorer_button">Carte SD</string>
    <string name="local_explorer_button">Stockage de l\'appareil</string>
    <string name="write_sms_button">Ecrire SMS</string>
    <string name="read_sms_button">Lire SMS</string>
    <string name="picture_explorer_button">Images</string>
    <string name="video_explorer_button">Vidéos</string>
    <string name="contacts_explorer_button">Contacts</string>

    <string name="edit_message">Message ...</string>
    <string name="button_send">Envoyer</string>



    <string name="title_activity_menu_activity">Menu_activity</string>
    <string name="contacts">Contacts</string>
    <string name="sms">SMS</string>
    <string name="sms_recu_button">SMS reçu</string>
    <string name="sms_envoyer_button">Envoyer</string>





    <string name="sms_button">SMS</string>

    <!-- Local Activity & Sd Activity -->
    <string name="title_activity_file_explorer_activity">Exploreur</string>


    <!-- Sms activity -->
    <string name="title_activity_sms">SMS</string>

    <!-- ecrire sms activity -->
    <string name="title_activity_sms__w">Ecrire SMS</string>
    <!-- chaine de caracteres pour activité envoi message -->
    <string name="numtel">Destinataire : </string>
    <string name="message">Message : </string>
    <string name="envoyer">Envoyer</string>
    <string name="effacer">Effacer</string>
    <string name="hello_world">Hello world!</string>
    
	<!--   lire Sms reçu activity   -->
    <string name="title_activity_read">Lire SMS</string>
	<!-- Menu -->
    <string name="action_compresser">Compresser</string>
    <string name="action_lire">Decompresser et lire SMS</string>
    
    
    <!--   lire Sms envoyer activity   -->
    <string name="title_activity_sms_send">SMS envoyer</string>
    <string name="sms_message">un message ...</string>
    <string name="sms_date">24 Janvier 1991 00:00:01</string>
    <string name="sms_name">+00212535608923</string>
    <string name="title_activity_read_sms_activity">Read_sms_activity</string>
    <string name="from_name">Inconnu</string>
    <string name="from_number">06453278</string>
    <string name="from_message">Message de mon ami</string>
    <string name="from_date">Reçu le 14 Mai 2015 à 12:35:43</string>
    <string name="button_compression_send">Envoyer compressé</string>
    <string name="title_activity_burger_menu_activity">burger_menu_activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="openDrawer">Opened</string>
    <string name="closeDrawer">closed</string>
    <string name="menu_zip">Compresser</string>
    <string name="menu_unzip">Décompresser</string>
    <string name="title_activity_infos_activity">Infos_activity</string>
    <string name="write_sms_contact">Saisir le(s) destinataire(s)</string>
    <string name="repository"><![CDATA[Repository >]]></string>
    <string name="videos"><![CDATA[Vidéos >]]></string>
    <string name="photos"><![CDATA[Photos >]]></string>
    <string name="title_activity_contact_explorer_activity">Contacts</string>
    <string name="menu_delete">Supprimer</string>
    <string name="deselectionne_tout">Déselectionner tout</string>
    <string name="selectionne_tout">Sélectionner tout</string>
</resources>
