<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".FileExplorerActivity">

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="200"
        android:title="@string/menu_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_zip"
        android:orderInCategory="200"
        android:title="@string/menu_zip"
        android:icon="@drawable/ic_zip"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_unzip"
        android:orderInCategory="200"
        android:title="@string/menu_unzip"
        android:icon="@drawable/ic_unzip"
        app:showAsAction="ifRoom"
        />



</menu>
