<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/black" >
 
    <TextView
        android:id="@+id/textViewNumTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numtel"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />
 
    <AutoCompleteTextView
        android:id="@+id/editTextNumTel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />
    
  
    <TextView
        android:id="@+id/textViewSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:paddingTop="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />
 
    <EditText
        android:id="@+id/editTextSMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="3"
        android:gravity="top" 
        android:textColor="@android:color/black"
       	android:paddingTop="20dp"
       	android:paddingLeft="20dp"
        android:paddingRight="20dp"
       	android:paddingBottom="20dp"
       	android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />

    
    
    <Button
        android:id="@+id/buttonEnvoyer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/envoyer" 
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />
    
    <Button
        android:id="@+id/buttonEffacer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/effacer" 
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />
 
</LinearLayout>
