<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/menu_activity_background"
                tools:context="com.capella.zipit.Menu_activity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            >

            <Button
                android:id="@+id/btn_internal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/local_explorer_button"
                android:textColor="@color/menu_activity_string_color"
                android:background="@color/menu_activity_row_background"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/local"

                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            >

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            >

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*"
                android:shrinkColumns="*"
                >
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btn_write_sms"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:paddingTop="10dp"
                        android:text="@string/write_sms_button"
                        android:textColor="@color/menu_activity_string_color"
                        android:background="@color/menu_activity_row_background"
                        android:drawableTop="@drawable/write_sms"
                        android:layout_marginRight="2.5dp"
                        />

                    <Button
                        android:id="@+id/btn_read_sms"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:text="@string/read_sms_button"
                        android:paddingTop="10dp"
                        android:textColor="@color/menu_activity_string_color"
                        android:background="@color/menu_activity_row_background"
                        android:drawableTop="@drawable/read_sms"
                        android:layout_marginLeft="2.5dp"
                        />

                </TableRow>
            </TableLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            >

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            >

            <Button
                android:id="@+id/btn_pictures"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/picture_explorer_button"
                android:paddingLeft="10dp"
                android:textColor="@color/menu_activity_string_color"
                android:background="@color/menu_activity_row_background"
                android:drawableLeft="@drawable/pictures"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            >

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            >

            <Button
                android:id="@+id/btn_videos"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/video_explorer_button"
                android:paddingRight="10dp"
                android:textColor="@color/menu_activity_string_color"
                android:background="@color/menu_activity_row_background"
                android:drawableRight="@drawable/videos"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            >

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            >

            <Button
                android:id="@+id/btn_contacts"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/contacts_explorer_button"
                android:paddingLeft="10dp"
                android:textColor="@color/menu_activity_string_color"
                android:background="@color/menu_activity_row_background"
                android:drawableLeft="@drawable/contacts_j"
                />

        </TableRow>

    </TableLayout>

</RelativeLayout>
